projeto-site/public/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');

* {
    padding    : 0;
    margin     : 0;
    font-family: 'Poppins', sans-serif;
    overflow-x: hidden;
}
::-webkit-scrollbar-track {
    background-color: #F4F4F4;
}
::-webkit-scrollbar {
    width: 6px;
    background: #231D36;
}
::-webkit-scrollbar-thumb {
    background: #231D36;
}
/* Inicio Header */

.header {
    background-color: #231D36;
    height          : 4.5em;
    width           : 100%;
    display         : flex;
    justify-content : space-around;
    align-items     : center;
}

.header-login {
    background-color: var(--belge);
    height          : 4.5rem;
    width           : 100%;
    display         : flex;
    justify-content : space-around;
    align-items     : center;
}

.button {
    background   : #F95738;
    border-style : none;
    height       : 3em;
    min-width: 30px;
    border-radius: 2em;
    cursor       : pointer;
    font-size    : 0.9em;
    font-weight  : 600;
    color        : #EBEBD3;
}

.button:hover {

    background-color: #fa3d17;
}


.button-entrar {
    margin-left  : 75%;
    background   : #F95738;
    border-style : none;
    height       : 1.8em;
    min-width: 30px;
    border-radius: 2em;
    cursor       : pointer;
    font-size    : 0.9em;
    font-weight  : 600;
    color        : #EBEBD3;
}


.button-entrar:hover {

    background-color: #fa3d17;
}

/* Fim Header */
/* menu hamburguer */

a {
    text-decoration: none;
    color          : #EBEBD3;
}

body {
    font: arial;
}

ul {
    list-style: none;
}

input[type="checkbox"] {
    display: none;
}

.mobile-menu {
    cursor: pointer;
}

.mobile-menu div {
    width     : 32px;
    height    : 2px;
    background: black;
    margin    : 8px;
    transition: 0.3s;
}

nav {
    background-color          : #201f22a1;
    width                     : 12em;
    height                    : 26em;
    left                      : -12.5em;
    position                  : absolute;
    transition                : all .5s;
    border-bottom-right-radius: 15em;
}

.estilo_ul {
    top     : 70px;
    position: absolute;
    width   : 100%;
}

.link_menu {
    display    : block;
    padding    : 20px 5px;
    color      : white;
    margin-left: 3%;
}

.link_menu:hover {
    color: rgb(176, 224, 230);
}

label {
    padding    : 10px;
    /* position: absolute; */
    z-index    : 1;
}

input[type="checkbox"]:checked~.menu nav {
    transform: translate(200px, -35px);
}

.menu-hamburguer {
    cursor: pointer;
}

.menu-hamburguer div {
    width     : 32px;
    height    : 2px;
    background: #fff;
    margin    : 8px;
    transition: 0.3s;
}

/* Inicio Hero */
.section-hero {
    display         : flex;
    flex-direction  : column;
    justify-content : center;
    padding         : 4em 4em 3em 4em;
    background-color: #231D36;
}

.content-hero {
    display              : grid;
    grid-template-columns: repeat(2, auto);
    grid-gap             : 15em;
    font-size            : 1em;
    margin               : auto;
}

.mensagem_inicial {
    margin-top: 2%;
}

.content-hero img {
    height : 30em;
    padding: 0 3em 0 3em;
}

.content-hero h2 {
    padding    : 1em 0 0.2em 0;
    font-size  : 5em;
    color      : #EEAF32;
    font-weight: 700;
}

.content-hero p {
    color: #EBEBD3;
}

.content-hero span {
    color: #EBEBD3;
}

/* Fim Hero */
/* Inicio Functions */
.section-functions {
    display         : flex;
    flex-direction  : column;
    justify-content : center;
    padding         : 4em 4em 5em 4em;
    background-color: #EBEBD3;
}

.content-functions {
    height: 39rem;
    padding: 20px;
    overflow-y: hidden;
}

.content-functions h2 {
    text-align : center;
    font-size  : 5em;
    font-weight: 400;
    color      : #231D36;
}

.icons {
    padding        : 3em 4em 0em 4em;
    display        : flex;
    justify-content: space-around;
    align-items    : center;
}

.icons-text {
    color  : grey;
    padding: 1em;
}

.icons section {
    width     : 18em;
    text-align: center;
}

.icons img {
    height : 8em;
    padding: 0 0 1em 0;
}

/* Fim Functions */
/* Inicio Service */
.section-service {
    display         : flex;
    flex-direction  : column;
    justify-content : center;
    padding         : 5em 8em 3em 8em;
    background-color: #EE964B;
}

.content-service {
    display              : grid;
    grid-template-columns: repeat(2, auto);
    grid-gap             : 6em;
}

.img-conect {
    height: 40em;
}

.content-service article {
    float      : right;
    margin-top : 8%;
    margin-left: 50px;
    align-items: center;
}

.content-service h2 {
    font-size  : 5em;
    font-weight: 400;
    padding    : 0 0 0.2em 0;
}

.content-service p {
    font-size: 1.5em;
    color    : #EBEBD3;
    padding  : 0 0 2.4em 0;
}

.button-saiba {
    height          : 4em;
    width           : 12em;
    border-radius   : 5em;
    cursor          : pointer;
    background-color: #231D36;
    font-size       : 1em;
    font-weight     : 600;
    color           : #EBEBD3;
}

.button-saiba:hover {
    background-color: #493e6d;
}

/* Fim Service */

/* @media only screen and (max-width: 1800px) {
    .content-service {
        display              : grid;
        grid-template-columns: repeat(2, auto);
        grid-gap             : 4em;
    }

    .content-service p {
        font-size: 1.2em;
    }

    .content-service h2 {
        font-size  : 5em;
        font-weight: 400;
        padding    : 0 0 0.2em 0;
    }

    .img-conect {
        height : 30em;
        padding: 5em 0 0 0;
    }
} */

/* Inicio Footer */
/* ESTILIZAÇÃO DAS TAG'S "a(LINK)" */
.link_icon,
.link_nav {
    text-decoration: none;
    color          : rgb(222, 215, 201);
}


/* CRIANDO O FOOTER, CONTAINER PAI */
.container_footer {
    width           : 100%;
    height          : 17em;
    background-color: #231D36;
}
/* ... */

